gccida/c0/decode_addr_const
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_addr_const/src/varasm.c:2764:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v2; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_addr_const/src/varasm.c:2782:11: error: use of undeclared identifier 'QCameraExposure'
offset += QCameraExposure::setAutoIsoSensitivity( target->complex.imag); 
          ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/decode_addr_const/src/obj/varasm.o] Error 1
